search bug on mobile.

--- a/src/scss/_components/misc/_search.scss
+++ b/src/scss/_components/misc/_search.scss
@@ -26,6 +26,7 @@
 		width: 100%;
 		bottom: 0;
 		background: #000;
+		height: calc(100vh - 104px);
 	}
 }
 .search_results_box{
